# scapix-example

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp  person.cpp  person.h
